<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appPrimary"
        tools:context=".view.fragments.login.FragmentLogin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_login_et"
            android:hint="@string/please_enter_your_mail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_login_et"
            android:hint="@string/please_enter_your_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/register_email" />

        <EditText
            android:id="@+id/register_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_login_et"
            android:hint="@string/please_enter_your_age"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/register_password" />

        <View
            android:id="@+id/view"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="16dp"
            android:background="@drawable/bg_circle_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_age" />

        <TextView
            android:id="@+id/register_error_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:padding="6dp"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:text="@string/invalidEmail" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/register_group_error_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="view,register_error_indicator"
            tools:visibility="visible" />

        <Button
            android:id="@+id/register_login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/appBackgroundDark"
            android:paddingStart="32dp"
            android:paddingTop="4dp"
            android:paddingEnd="32dp"
            android:paddingBottom="4dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/register_submit_btn"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/register_submit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/appBackgroundDark"
            android:paddingStart="32dp"
            android:paddingTop="4dp"
            android:paddingEnd="32dp"
            android:paddingBottom="4dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/register_login_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
